# mtconnect-monitoring

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
cloud/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.xsd.config.ts  wrangler.jsonc
cloud/migrations/: 0001_init.sql  0001_v2_init.sql  0002_processor_cursor_state.sql  0002_state_interval_unique.sql
cloud/scripts/: demo-poller.ts  gen-golden.ts  tsconfig.json
cloud/src/: auth.ts  db.ts  index.ts  types.ts
cloud/test/: alerts.rules.test.ts  alerts.scanner.test.ts  apply-migrations.ts  auth.test.ts  helpers.ts  ingest.events.test.ts  ingest.observations.test.ts  ingest.probe.test.ts  ingest.rollups.test.ts  ingest.state.test.ts  migrations.ts  read.alerts.test.ts  (+15 more)
edge/: README.md
edge/collector/: README.md  pyproject.toml
edge/collector/src/collector/: __init__.py  cloud.py  main.py  mtconnect.py  rollups.py  state_machine.py
edge/collector/tests/: test_cloud.py  test_main_smoke.py  test_mtconnect.py  test_rollups.py  test_state_machine.py
edge/collector/tests/fixtures/: haas_current_active.xml  haas_current_alarm.xml  haas_current_unavailable.xml
edge/forwarder/: Dockerfile  pyproject.toml
edge/forwarder/src/forwarder/: agent_client.py  buffer.py  cloud_client.py  config.py  main.py  probe.py  streams.py
edge/forwarder/tests/: test_agent_client.py  test_buffer.py  test_cloud_client.py  test_main_smoke.py  test_probe.py  test_streams.py
edge/forwarder/tests/fixtures/: mazak_probe.xml  mazak_sample_chunk1.xml  mazak_sample_chunk2.xml
(+50 files in other folders)
