[project]
name = "mtconnect-collector"
version = "0.1.0"
description = "FFMFG edge collector: tails MTConnect /current, pushes state intervals, events, and minute rollups to the cloud worker."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
mtconnect-collector = "collector.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
