[project]
name = "mtconnect-forwarder"
version = "0.1.0"
description = "MTConnect edge forwarder: cppagent long-poll -> SQLite buffer -> cloud Worker"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.32",
  "ruff>=0.7",
  "pyright>=1.1.380",
]

[project.scripts]
forwarder = "forwarder.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]
